k8s-staging/repository-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repository
  namespace: storm-staging
  labels:
    app: repository
    component: storm-core
spec:
  selector:
    app: repository
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
