k8s-staging/repository-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repository
  namespace: storm-staging
  labels:
    app: repository
    component: storm-core
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: storm-repo-staging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: repository
                port:
                  number: 8080
